--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>BenchBnB</title>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key={AIzaSyBlodUHkdqmsY_YBDCO0F_tfuwLQ_SVUco}" %>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
